# luampdclient

./: .gitignore  Makefile.am  TODO.mkd  autogen.sh  configure.ac
src/: Makefile.am  connection.c  directory.c  entity.c  error.c  globals.h  idle.c  mpdclient.c  output.c  pair.c  playlist.c  protocol.c  song.c  stats.c  status.c  stored_playlist.c
